[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.28.1", features = ["all-widgets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
